templates/src/scss/_modal.scss
.modal.carousel {
    position : fixed; // Needed because the carousel overrides the position property
    z-index  : 2000;
    .modal-body {
        padding : 0;
    }
}

.modal-backdrop-gallery {
    z-index : 1060;
}

.modal-vertical-centered {
    transform         : translate(0, 15%) !important;
    -ms-transform     : translate(0, 15%) !important; /* IE 9 */
    -webkit-transform : translate(0, 15%) !important; /* Safari and Chrome */
}

/* .modal-fullscreen */
.modal-fullscreen, .modal-content-box {
    background : #ffffff;

    .modal-dialog {
        margin : 0;
        height : 100%;
    }

    .modal-content {
        background : #ffffff;
        height     : 100%;
        margin     : 0;
    }

    .modal-header {
        border-bottom : none;
        padding       : 0;
        .close-button {
            width      : 25px;
            height     : 25px;
            position   : absolute;
            right      : 100px;
            top        : 110px;
            background : url(../../dist/img/mobile-close.svg) no-repeat;
            display    : inline-block;
            cursor     : pointer;
            z-index    : 10;
            &:hover, &:active, &:focus {
                background : url(../../dist/img/mobile-close-hover.svg) no-repeat;
            }
        }

    }
    .modal-body {
        max-height : 100vh;
        overflow-y : auto;

        .entry-content {
            margin-top : 100px;
            padding    : 0 5%;
            .title {
                text-transform : uppercase;
            }

            .we-do-list.skills-list.no-border {
                ul {
                    li {
                        line-height : 1.2;
                    }
                }
            }

            .line-height-1-5 {
                line-height : 1.5;
            }
        }
    }
}

.modal-fullscreen .modal-content, .modal-content-box .modal-content {
    background         : transparent;
    border             : 0;
    -webkit-box-shadow : none;
    box-shadow         : none;
}

/* .modal-fullscreen size: we use Bootstrap media query breakpoints */
.modal-fullscreen .modal-dialog, .modal-content-box .modal-dialog {
    //margin       : 0;
    margin-right : auto;
    margin-left  : auto;
    width        : 100%;
}

.modal-open {
    overflow : auto;
}

.modal-content-box {
    .modal-dialog {
        -webkit-border-radius : 0;
        -moz-border-radius    : 0;
        border-radius         : 0;
    }
}

@media (min-width : 768px) {
    .modal-fullscreen .modal-dialog {
        .modal-content {
            //width : 95%;
            //margin : 0 auto;

        }
    }
}

@media (min-width : 992px) {
    .modal-fullscreen .modal-dialog {
        .modal-content {
            //width : 90%;
            //margin : 0 auto;

        }
    }
}

@media (min-width : 1200px) {
    .modal-fullscreen .modal-dialog {
        .modal-content {
            //width : 90%;
            //margin : 0 auto;
        }
    }
}

.modal-body {
    overflow : hidden;
}

@media screen and (min-width : 640px) and (max-width : 999px) {
    .modal-fullscreen, .modal-content-box {
        .modal-header {
            .close-button {
                right : 30px;
                top   : 110px;
            }
        }
    }
}

///////mobile modal page//////////
@media screen and (max-width : 640px) {
    .modal-fullscreen, .modal-content-box {
        margin-top : 60px;
        .modal-dialog {
            margin-top : 0;
        }
        .modal-header {
            .close-button {
                right: 15px;
                top: 10px;
            }
        }
        .modal-body {
            padding : 0 20px;
            .entry-content {
                padding    : 0;
                margin-top : 60px;
                .title {
                    @include font-size(4.1);
                    text-transform : capitalize;
                }

                .sub-title {
                    @include font-size(2.4);
                }

                .sub-content {
                    @include font-size(1.6);
                }
            }
        }
    }

    .modal-open {
        overflow : hidden;
    }

    .mobile-modal {
        margin-top       : 50px;
        margin-left      : 15px;
        padding-right    : 15px;
        overflow-x       : hidden;
        overflow-y       : scroll;
        background-color : #fff;
        z-index          : 2;

        .mobile-close {
            width      : 25px;
            height     : 25px;
            position   : absolute;
            right      : 15px;
            top        : 20px;
            background : url(../../dist/img/mobile-close.svg) no-repeat;
            display    : inline-block;
            cursor: pointer;
            &:hover, &:active, &:focus {
                background : url(../../dist/img/mobile-close-hover.svg) no-repeat;

            }
        }
        //end of .mobile-close

        .mobile-page-content {
            margin-top     : 60px;
            padding-bottom : 50px;
            .mobile-title {
                margin-top    : 50px;
                margin-bottom : 25px;
                @include font-size(4.1);
                color         : #f7a800;
            }

            .sub-content {
                @include font-size(1.6);
                margin-bottom : 43px;
            }

            //end of .mobile-title
            .mobile-text-div {
                @include font-size(1.4);
                color : #77777a;

                a {
                    color : #77777a;
                    &:hover, &:active, &:focus {
                        text-decoration : none;
                        span {
                            text-decoration : underline;
                        }
                    }
                }

            }
            //end of .mobile-text-div

            .mobile-img-show {
                margin-top : 30px;
                .mobile-pop {
                    cursor : pointer;
                }
                .carousel-indicators {
                    bottom  : -70px;
                    z-index : 1;
                    li {
                        background-color : #b9b8ba;
                        border           : solid 1px #77777a;
                        margin           : 0;
                        &.active {
                            background-color : #ffffff;
                            border           : solid 1px #77777a;
                            width            : 10px;
                            height           : 10px;
                        }
                    }
                }
                //end of .carousel-indicators
                img {
                    margin : 0 auto;
                }

            }
            //end of mobile-img-show
        }
        //end of .mobile-page-content

    }
    //end of .mobile-modal

    .mobile-pop-modal {
        margin-top       : 54px;
        overflow-x       : hidden;
        overflow-y       : scroll;
        background-color : #333;
        opacity          : 0.95;
        z-index          : 3;

        .mobile-pop-close, .mobile-pop-close-button {
            width    : 25px;
            height   : 25px;
            position : absolute;
            right    : 20px;
            top      : 15px;
            z-index  : 3;
        }

        .mobile-pop-slide {
            margin-top : 80px;
            height     : 90%;
            min-height : 600px;
            .carousel-inner {
                height : 100%;
                .mobile-pop-img {
                    height : 100%;
                    .carousel-caption {
                        top : 300px;
                        @include font-size(1.4);
                    }
                }
            }
            img {
                margin : 0 auto;
            }

        }
        //end of .mobile-pop-slide

    }
    //end of .mobile-pop-modal

    .modal-backdrop.modal-backdrop-fullscreen.in {
        z-index : -1 !important;
    }

    .modal-backdrop.modal-backdrop-mobile {
        background : #ffffff;
        margin-top : 100px;
    }

    .modal-backdrop.modal-backdrop-mobile.in {
        opacity : .99;
        filter  : alpha(opacity=99);
        z-index : 1 !important;
    }

    .modal.mobile-pop-modal {
        z-index : 2000;
    }

}

